697: Fix the position of the search icon in the header on mobile/tablet

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -243,10 +243,6 @@ a.header__link {
   justify-content: space-between;
 }
 
-.header__mobile-actions:only-child {
-  justify-content: flex-end;
-}
-
 .header__link-description {
   display: none;
 }
